# Game_Pong

./: CMakeLists.txt  Game_Pong.sln  Game_Pong.vcxproj  Game_Pong.vcxproj.filters  README.md  game.cpp  platform_common.cpp  renderer.cpp  utils.cpp  win32_platform.cpp
src/: game.cpp  platform_common.cpp  renderer.cpp  utils.cpp  win32_platform.cpp
test/: tests.cpp
